# ps_pipeline

./: .env.sample  .gitignore  README.md  json_model.py  pyproject.toml  requirements.txt  setup.py
extract/: extract_model.py  filescrape.py  model.py  presidential.py  scrapi.py  variation_1.py  variation_10.py  variation_11.py  variation_2.py  variation_3.py  variation_4.py  variation_5.py  variation_6.py  variation_7.py  variation_8.py  variation_9.py  webscrape_1.py  webscrape_2.py  webscrape_3.py
extract/extract/: extract_1.py  extract_10.py  extract_11.py  extract_2.py  extract_3.py  extract_4.py  extract_5.py  extract_6.py  extract_7.py  extract_8.py  extract_9.py  presidential.py
extract/pattern/: __init__.py  extract_1.py  extract_10.py  extract_11.py  extract_2.py  extract_3.py  extract_4.py  extract_5.py  extract_6.py  extract_7.py  extract_8.py  extract_9.py  presidential.py
load/: file_harvest.py  load.py  match.py  pipe.py
load/queries/: office-candidates-active.sql
ps_pipeline/: json_model.py
ps_pipeline/extract/: __main__.py  pipe.py
ps_pipeline/extract/web/: model.py  soup_model.py
ps_pipeline/load/: __main__.py  match.py  pipe.py
ps_pipeline/queries/: office-candidates-active.sql  speechtypes.sql
ps_pipeline/tests/: asciify.py  conftest.py  manual_transform.py  str_format.py  test_attributed_statements.py
ps_pipeline/transform/: __main__.py  pipe.py
tests/: test_statements.py
tests/data/: statements.json
transform/: nlp.py  pipe.py  statements_detection.py  test.json  transform.py  translate.py
(+18 files in other folders)
